# Eviot

./: LICENSE  README.md  pyproject.toml  requirements.txt  samples.txt  test.py
archive/: doc.txt  test.py
backend/: main.py  session.py
backend/demo/: scenarios.py
backend/demo/data/bitcoin/: consensus.txt
backend/demo/data/medical/: insulin.txt
backend/demo/data/medical_evidence/: insulin.txt
backend/eviot/encoders/: encoder.py
backend/eviot/ot/: cost.py
backend/eviot/query/: decompose.py  decompose_spacy.py
backend/eviot/runners/: single_query.py
backend/eviot/selection/: adaptive.py  greedy.py  set_builder.py  temporal.py
backend/eviot/temporal/: temporal_builder.py
backend/eviot/utils/: score_check.py
backend/ingestion/: chunker.py  parser.py
backend/llm/: answer.py
backend/retrieval/: llm_engine.py  naive_rag.py  ot_engine.py
docs/: instructions.txt  questions.txt
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/answer/: AnswerPanel.tsx
frontend/components/chat/: MessageStream.tsx
frontend/components/input/: DocumentUpload.tsx
frontend/components/layout/: LeftPanel.tsx  RightPanel.tsx
frontend/components/visualization/: ContextLog.tsx  CoverageGauge.tsx  MarginalGainCurve.tsx
frontend/hooks/: useQueryRunner.ts  useSSE.ts
